# wikibooks-haskell

./: .gitignore  Main.hs  README.md  WikiBooks.cabal
ElementaryHaskell/: ControlStructures.hs  Lists2.hs  Lists3.hs  PatternMatching.hs  Recursion.hs  TypeDeclarations.hs
IntermediateHaskell/: ClassesAndTypes.hs  HaskelModules.hs  Indentation.hs  OtherDataStructures.hs  StandalonePrograms.hs
Monads/: DoNotation.hs  IoApplicativeFunctor.hs  UnderstandMonads.hs
Solitaire/: Action.hs  AnsiColor.hs  Card.hs  Foundation.hs  Game.hs  Location.hs  Progress.hs  Stock.hs  Tableau.hs
