cabal-version: 2.4
name: WikiBooks
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
extra-source-files:
    README.md

executable WikiBooks
    main-is: Main.hs
    other-modules:
        Monads.IoApplicativeFunctor
        Monads.DoNotation
        Monads.UnderstandMonads
        IntermediateHaskell.ClassesAndTypes
        IntermediateHaskell.HaskelModules
        IntermediateHaskell.Indentation
        IntermediateHaskell.OtherDataStructures
        IntermediateHaskell.StandalonePrograms
        ElementaryHaskell.Lists3
        ElementaryHaskell.PatternMatching
        ElementaryHaskell.ControlStructures
        ElementaryHaskell.Lists2
        ElementaryHaskell.Recursion
        ElementaryHaskell.TypeDeclarations
        Solitaire.Progress
        Solitaire.Card
        Solitaire.Foundation
        Solitaire.Location
        Solitaire.Action
        Solitaire.AnsiColor
        Solitaire.Game
        Solitaire.Stock
        Solitaire.Tableau
    default-language: Haskell2010
    build-depends:
        base -any,
        containers -any
