cabal-version: 2.4
name: WikiBooks
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
extra-source-files:
    README.md

executable WikiBooks
    main-is: Main.hs
    other-modules:
        Monads.UnderstandMonads
        Monads.DoNotation
        Monads.IoApplicativeFunctor
        Solitaire.Tableau
        Solitaire.Stock
        Solitaire.Game
        Solitaire.AnsiColor
        Solitaire.Action
        Solitaire.Foundation
        Solitaire.Location
        Solitaire.Card
        Solitaire.Progress
        IntermediateHaskell.Indentation
        IntermediateHaskell.ClassesAndTypes
        IntermediateHaskell.OtherDataStructures
        IntermediateHaskell.HaskelModules
        IntermediateHaskell.StandalonePrograms
        ElementaryHaskell.ControlStructures
        ElementaryHaskell.Lists2
        ElementaryHaskell.Recursion
        ElementaryHaskell.TypeDeclarations
        ElementaryHaskell.Lists3
        ElementaryHaskell.PatternMatching
    default-language: Haskell2010
    build-depends:
        base -any,
        containers -any
