cabal-version: 2.4
name: WikiBooks
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2
extra-source-files:
    README.md

executable WikiBooks
    main-is: Main.hs
    other-modules:
        Solitaire.Foundation
        Solitaire.AnsiColor
        Solitaire.Card
        Solitaire.Game
        Solitaire.Location
        Solitaire.Progress
        Solitaire.Action
        Solitaire.Tableau
        Solitaire.Stock
        Monads.IoApplicativeFunctor
        Monads.UnderstandMonads
        Monads.DoNotation
        ElementaryHaskell.Recursion
        ElementaryHaskell.TypeDeclarations
        ElementaryHaskell.ControlStructures
        ElementaryHaskell.Lists3
        ElementaryHaskell.Lists2
        ElementaryHaskell.PatternMatching
        IntermediateHaskell.Indentation
        IntermediateHaskell.HaskelModules
        IntermediateHaskell.StandalonePrograms
        IntermediateHaskell.OtherDataStructures
        IntermediateHaskell.ClassesAndTypes
    default-language: Haskell2010
    build-depends:
        base -any,
        containers -any
